---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 24.10.2024
  Features:
    - Deeper Compatibility with S-A
  Graphics:
    - Broken graphics.
    - Removed outdated graphics code. 
  Changes:
    - Optional space science setting apering with S-A or SE.
    - Changed Weight values on Armour & Lasers.
    - Listed Dependencies: 1 removed, 1 name corrected.
  SpaceAge:
    - Added S-A SciencePacks to Par Tech.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 22.10.2024
  Bugfixes:
    - Fixed release crash with missing file no idea what that was about.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 22.10.2024
  Features:
    - Updated to work with 2.0 Base & S-A.
    - Added sounds to all items in mod.
    - Made sure equipping equipment can be equipted.(bug)
    - Added propper Weight values to all items in mod to be able to ship items in rocket for S-A.
  Changes:
    - Deleted dlc folders.
    - Removed Compatibility with IR3 as the mod is now a dead ghost.
  Scripting:
    - Deleted some Mipmap. Reworking texture is coming eventualy. looking at you tech tree.
  Info:
    - Will try maintain to some extend for 1.1 at least 6 more months should you find bugs.
---------------------------------------------------------------------------------------------------
Version: 0.2.18
Date: 12.10.2024
  Scripting:
    - Renamed Quality Comp files.
    - Figuring out why some/lot's of my tech dependecy code won't work and apply fix.
  Modding:
    - Issue with missing ores if bob's ores are not enabled. Added to bob's plates instead due to it having ores as dependendcy.
---------------------------------------------------------------------------------------------------
Version: 0.2.17
Date: 05.09.2024
  Features: