@@ -2,16 +2,22 @@
 Version: 0.3.2
 Date: 24.10.2024
   Features:
-    - Deeper Compatibility with S-A
+    - Deeper Compatibility with S-A.
   Graphics:
     - Broken graphics.
-    - Removed outdated graphics code. 
+    - Removed outdated graphics code.
+    - More fixes to come.
   Changes:
     - Optional space science setting apering with S-A or SE.
     - Changed Weight values on Armour & Lasers.
     - Listed Dependencies: 1 removed, 1 name corrected.
+    - updated Recipes on 7-10.
+  Bugfixes:
+    - Tech tree issue processing unit was applied to worng tech.
+    - Made base mech armour use MK5 armour and prerequsite.
   SpaceAge:
-    - Added S-A SciencePacks to Par Tech.
+    - Added S-A SciencePacks to Par Armour Tech.
+    - Changed Prerequsites to cont in the science packs.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 22.10.2024
